# Arieo-Module-Main

./: ArieoPackage.yaml  CMakeLists.txt  arieo_package.json
private/src/main_entry/: main_entry.android.cpp  main_entry.cpp
private/src/main_memory/: main_memory.cpp  main_memory.h
private/src/main_module/: main_module.cpp  main_module.h
